--- a/assets/css/scss/layout/_banner.scss
+++ b/assets/css/scss/layout/_banner.scss
@@ -94,6 +94,7 @@
 			justify-content: center;
 			margin-bottom: 50px;
 			margin-top: 50px;
+			position: relative;
 			z-index: 4;
 		}
 
